kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-checker
  namespace: tools
spec:
  selector:
    app: http-checker
  ports:
    - port: 4999
      targetPort: 4999
